; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msports/extr_serial.c_RestoreDefaultValues.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msports/extr_serial.c_RestoreDefaultValues.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@IDC_SERIAL_BITSPERSECOND = common dso_local global i32 0, align 4
@DEFAULT_BAUD_RATE_INDEX = common dso_local global i32 0, align 4
@IDC_SERIAL_DATABITS = common dso_local global i32 0, align 4
@DEFAULT_DATA_BITS_INDEX = common dso_local global i32 0, align 4
@IDC_SERIAL_PARITY = common dso_local global i32 0, align 4
@DEFAULT_PARITY_INDEX = common dso_local global i32 0, align 4
@IDC_SERIAL_STOPBITS = common dso_local global i32 0, align 4
@DEFAULT_STOP_BITS_INDEX = common dso_local global i32 0, align 4
@IDC_SERIAL_FLOWCONTROL = common dso_local global i32 0, align 4
@DEFAULT_FLOW_CONTROL_INDEX = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.TYPE_3__*)* @RestoreDefaultValues to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RestoreDefaultValues(i64 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i32, i32* @IDC_SERIAL_BITSPERSECOND, align 4
  %9 = call i64 @GetDlgItem(i64 %7, i32 %8)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i64, i64* %6, align 8
  %14 = load i32, i32* @DEFAULT_BAUD_RATE_INDEX, align 4
  %15 = call i32 @ComboBox_SetCurSel(i64 %13, i32 %14)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i64, i64* %4, align 8
  %18 = load i32, i32* @IDC_SERIAL_DATABITS, align 4
  %19 = call i64 @GetDlgItem(i64 %17, i32 %18)
  store i64 %19, i64* %6, align 8
  %20 = load i64, i64* %6, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %16
  %23 = load i64, i64* %6, align 8
  %24 = load i32, i32* @DEFAULT_DATA_BITS_INDEX, align 4
  %25 = call i32 @ComboBox_SetCurSel(i64 %23, i32 %24)
  br label %26

26:                                               ; preds = %22, %16
  %27 = load i64, i64* %4, align 8
  %28 = load i32, i32* @IDC_SERIAL_PARITY, align 4
  %29 = call i64 @GetDlgItem(i64 %27, i32 %28)
  store i64 %29, i64* %6, align 8
  %30 = load i64, i64* %6, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %26
  %33 = load i64, i64* %6, align 8
  %34 = load i32, i32* @DEFAULT_PARITY_INDEX, align 4
  %35 = call i32 @ComboBox_SetCurSel(i64 %33, i32 %34)
  br label %36

36:                                               ; preds = %32, %26
  %37 = load i64, i64* %4, align 8
  %38 = load i32, i32* @IDC_SERIAL_STOPBITS, align 4
  %39 = call i64 @GetDlgItem(i64 %37, i32 %38)
  store i64 %39, i64* %6, align 8
  %40 = load i64, i64* %6, align 8
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %46

42:                                               ; preds = %36
  %43 = load i64, i64* %6, align 8
  %44 = load i32, i32* @DEFAULT_STOP_BITS_INDEX, align 4
  %45 = call i32 @ComboBox_SetCurSel(i64 %43, i32 %44)
  br label %46

46:                                               ; preds = %42, %36
  %47 = load i64, i64* %4, align 8
  %48 = load i32, i32* @IDC_SERIAL_FLOWCONTROL, align 4
  %49 = call i64 @GetDlgItem(i64 %47, i32 %48)
  store i64 %49, i64* %6, align 8
  %50 = load i64, i64* %6, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %56

52:                                               ; preds = %46
  %53 = load i64, i64* %6, align 8
  %54 = load i32, i32* @DEFAULT_FLOW_CONTROL_INDEX, align 4
  %55 = call i32 @ComboBox_SetCurSel(i64 %53, i32 %54)
  br label %56

56:                                               ; preds = %52, %46
  %57 = load i32, i32* @TRUE, align 4
  %58 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %59 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %58, i32 0, i32 0
  store i32 %57, i32* %59, align 4
  %60 = load i32, i32* %3, align 4
  ret i32 %60
}

declare dso_local i64 @GetDlgItem(i64, i32) #1

declare dso_local i32 @ComboBox_SetCurSel(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
